[gd_scene load_steps=8 format=3 uid="uid://db4cq7ynkhhu0"]

[ext_resource type="Script" path="res://DominoFieldHUD.gd" id="1_qr0kb"]
[ext_resource type="Script" path="res://main.gd" id="1_w1wrx"]
[ext_resource type="Script" path="res://DominoField.gd" id="1_wq0b8"]
[ext_resource type="Script" path="res://Domino.gd" id="2_imbjd"]
[ext_resource type="Script" path="res://DominoTrashCan.gd" id="4_owiyu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_euvar"]
size = Vector2(512, 512)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mit5l"]
size = Vector2(192, 128)

[node name="Node2D" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("1_w1wrx")

[node name="DominoField" type="Node2D" parent="Node2D"]
script = ExtResource("1_wq0b8")

[node name="FieldArea2D" type="Area2D" parent="Node2D/DominoField"]

[node name="FieldShape2D" type="CollisionShape2D" parent="Node2D/DominoField/FieldArea2D"]
shape = SubResource("RectangleShape2D_euvar")

[node name="Camera2D" type="Camera2D" parent="Node2D"]
scale = Vector2(0.994576, 1)

[node name="CreateDomino" type="Button" parent="Node2D"]
offset_left = 288.0
offset_top = -224.0
offset_right = 480.0
offset_bottom = -168.0
text = "Create domino"

[node name="DominoTrashCan" type="Area2D" parent="Node2D"]
position = Vector2(-416, -128)
script = ExtResource("4_owiyu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/DominoTrashCan"]
shape = SubResource("RectangleShape2D_mit5l")

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D/DominoTrashCan"]
offset_left = -80.0
offset_top = -16.0
offset_right = 72.0
offset_bottom = 16.0
bbcode_enabled = true
text = "[center][font_size=20]Delete domino[/font_size][/center]"

[node name="DominoSpawnPoint" type="Node2D" parent="Node2D"]
position = Vector2(384, -64)

[node name="Domino" type="Node2D" parent="Node2D/DominoSpawnPoint"]
script = ExtResource("2_imbjd")

[node name="DominoFieldHUD" type="Node2D" parent="."]
script = ExtResource("1_qr0kb")

[connection signal="HUD_redraw" from="Node2D/DominoField" to="DominoFieldHUD" method="_on_domino_field_hud_redraw"]
[connection signal="pressed" from="Node2D/CreateDomino" to="Node2D" method="_on_create_domino_pressed"]
[connection signal="area_entered" from="Node2D/DominoTrashCan" to="Node2D/DominoTrashCan" method="_on_area_entered"]
